tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__GettingAround-bAal8kZ3R8eRTwaHgbYkKA==__StepAssistant-AAAAAAAAAAAAAAAAAAAG8w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1779,
  "prerequisites": [
    49,
    486
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Piston Boots are a bouncy pair of shoes for adventurers.\n\nIt functions as a piece of armor for the foot slot that gives a fun jump boost! They let the wearer jump up to THREE blocks in height and increase run speed. They also grant a Step-Up enchantment to allow the wearer to step up a single block without jumping while sprinting. You can repair them with leather using an anvil.\n\nBasically, make them ASAP.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Step Assistant",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    49,
    486
  ],
  "rewards": [],
  "tasks": []
}
