tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__GettingAround-bAal8kZ3R8eRTwaHgbYkKA==__TheTranscontinen-AAAAAAAAAAAAAAAAAAAEpQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1189,
  "prerequisites": [
    97,
    866
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Electrical tracks are used together with your electric locomotive. You need to power the rails with energy.\n\nNEI doesn't show the right recipe on the first page. Go through the recipes a bit to find the right one.\n\n[note]Alternatively you can use the search bar to search for a specific name, in this case electric tracks![/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "The Transcontinental Railroad - Electric",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    97,
    866
  ],
  "rewards": [],
  "tasks": []
}
