tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__GettingAround-bAal8kZ3R8eRTwaHgbYkKA==__Trainspotting-AAAAAAAAAAAAAAAAAAACmw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 667,
  "prerequisites": [
    677
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The wooden tracks can be made without any machine, though always check NEI for assembler recipes for discounts. Functionally equivalent to normal rails, but with a lower maximum speed (for safety reasons).\n\n[note]Hint: You can use your wooden rails for Steve's Carts farms.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Trainspotting",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    677
  ],
  "rewards": [],
  "tasks": []
}
