tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__GettingAround-bAal8kZ3R8eRTwaHgbYkKA==__Travelocity-AAAAAAAAAAAAAAAAAAAM3Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3293,
  "prerequisites": [
    2673,
    1509
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Why walk when you can teleport? This upgrade to the staff of traveling can move you even further, even faster, and will never run out of energy.\n\nRight-click:\n * If targeting a travel anchor: teleport to it, 2048 range\n * If looking at a block: teleport to it, 512 range\n * If no block in range: teleport forward, 64 range\n * If looking at a block within 4 range: teleport to the other side of a wall, 16 range\n * No cooldown\n\nShift-right-click:\n * Same as right-click, but ignoring travel anchors\n * Travel anchors will be hidden from view while holding shift\n\n[note]Tip: You won't be able to see travel anchors that are far away, but can still teleport to them if they are in range and chunk-loaded. Try using JourneyMap waypoints to mark anchors![/note]\n\n[note]Note: The right-click and shift-right-click actions are fully configurable. Check the EnderIO Staff Settings configs!\nConfig action values:\n 0: Do nothing\n 1: Teleport to look / forward\n 2: Teleport to anchor\n 3: Teleport to anchor, or to look / forward if no anchor[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Travelocity²",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2673,
    1509
  ],
  "rewards": [],
  "tasks": []
}
