tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__GettingAround-bAal8kZ3R8eRTwaHgbYkKA==__Walkalloveryou-AAAAAAAAAAAAAAAAAAAI1Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2261,
  "prerequisites": [
    2260,
    779
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Nanosuit Boots of the Traveller provide all the benefits of the Nanosuit, plus a massive speed boost, higher jump, and improved Vis Discount. These are the perfect boots for the master magical engineer.\n\n[note]If you want to advance in the dark arts you can also make them voidwalker boots.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Walk all over you",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2260,
    779
  ],
  "rewards": [],
  "tasks": []
}
